--- a/c_code/code-1/java-net/pom.xml
+++ b/c_code/code-1/java-net/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>code-demo-1</artifactId>
+    <artifactId>java-net</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
