--- a/c_code/code-1/pom.xml
+++ b/c_code/code-1/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>code-demo-1</module>
+        <module>java-net</module>
         <module>code-demo-spring-1</module>
         <module>ioc-container-overview</module>
         <module>spring-bean</module>
