历史代码提交

--- a/bee-code-test-field/spring-test-field/springframework-test-field/pom.xml
+++ b/bee-code-test-field/spring-test-field/springframework-test-field/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>bean-lifecycle</module>
         <module>ioc-container-overview</module>
+        <module>configuration-metadata</module>
     </modules>
 
     <properties>
