--- a/bee-code-test-field/java-test-field/pom.xml
+++ b/bee-code-test-field/java-test-field/pom.xml
@@ -2,15 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>bee-code-test-field</artifactId>
+        <groupId>club.beenest</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>club.beenest</groupId>
-    <artifactId>bee-code-test-field</artifactId>
+    <artifactId>java-test-field</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+
     <modules>
-        <module>spring-test-field</module>
-        <module>java-test-field</module>
+        <module>java-thread-test-field</module>
     </modules>
 
     <properties>
