统一一次代码

--- a/bee-code-test-field/pom.xml
+++ b/bee-code-test-field/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>spring-test-field</module>
         <module>java-test-field</module>
+        <module>mybatis-test-field</module>
     </modules>
 
     <properties>
