一些算法代码

--- a/bee-code-test-field/pom.xml
+++ b/bee-code-test-field/pom.xml
@@ -12,6 +12,7 @@
         <module>spring-test-field</module>
         <module>java-test-field</module>
         <module>mybatis-test-field</module>
+        <module>bee-algorithm</module>
     </modules>
 
     <properties>
