--- a/bee-code-test-field/spring-test-field/pom.xml
+++ b/bee-code-test-field/spring-test-field/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>springframework-test-field</module>
+        <module>java-bean</module>
     </modules>
 
     <properties>
