--- a/bee-code-test-field/redis-test-field/pom.xml
+++ b/bee-code-test-field/redis-test-field/pom.xml
@@ -2,19 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>bee-code-test-field</artifactId>
+        <groupId>club.beenest</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>club.beenest</groupId>
-    <artifactId>bee-code-test-field</artifactId>
+    <artifactId>redis-test-field</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>spring-test-field</module>
-        <module>java-test-field</module>
-        <module>mybatis-test-field</module>
-        <module>bee-algorithm</module>
-        <module>redis-test-field</module>
-        <module>project-demo</module>
+        <module>redis-base</module>
     </modules>
 
     <properties>
@@ -22,4 +20,12 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <!-- redis依赖 -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+    </dependencies>
 </project>
