代码监控代码重构

--- a/learn-tomcat/tomcat7/project/apache-tomcat-7.0.88/conf/catalina.properties
+++ b/learn-tomcat/tomcat7/project/apache-tomcat-7.0.88/conf/catalina.properties
@@ -14,11 +14,13 @@
 # limitations under the License.
 
 #
-# List of comma-separated packages that start with or equal this string
-# will cause a security exception to be thrown when
-# passed to checkPackageAccess unless the
+# List of comma-separated(????) packages that start with or equal this string
+# will cause(??,??) a security exception to be thrown when
+# passed to checkPackageAccess unless(??) the
 # corresponding RuntimePermission ("accessClassInPackage."+package) has
-# been granted.
+# been granted(??).
+# ??????????????????????????????????????????????????????
+# RuntimePermission????????????????
 package.access=sun.,org.apache.catalina.,org.apache.coyote.,org.apache.jasper.,\
 org.apache.naming.resources.,org.apache.tomcat.
 #
@@ -30,7 +32,7 @@ org.apache.naming.resources.,org.apache.tomcat.
 #
 # by default, no packages are restricted for definition, and none of
 # the class loaders supplied with the JDK call checkPackageDefinition.
-#
+# ? package.access ??? ??? RuntimePermission ???
 package.definition=sun.,java.,org.apache.catalina.,org.apache.coyote.,\
 org.apache.jasper.,org.apache.naming.,org.apache.tomcat.
 
@@ -46,6 +48,7 @@ org.apache.jasper.,org.apache.naming.,org.apache.tomcat.
 #     "foo/*.jar": Add all the JARs of the specified folder as class
 #                  repositories
 #     "foo/bar.jar": Add bar.jar as a class repository
+# ??????????????????????????????????
 common.loader=${catalina.base}/lib,${catalina.base}/lib/*.jar,${catalina.home}/lib,${catalina.home}/lib/*.jar
 
 #
@@ -59,6 +62,7 @@ common.loader=${catalina.base}/lib,${catalina.base}/lib/*.jar,${catalina.home}/l
 #     "foo/*.jar": Add all the JARs of the specified folder as class
 #                  repositories
 #     "foo/bar.jar": Add bar.jar as a class repository
+# ???????
 server.loader=
 
 #
@@ -73,14 +77,15 @@ server.loader=
 #     "foo/bar.jar": Add bar.jar as a class repository
 # Please note that for single jars, e.g. bar.jar, you need the URL form
 # starting with file:.
+# ???????
 shared.loader=
 
 # List of JAR files that should not be scanned using the JarScanner
-# functionality. This is typically used to scan JARs for configuration
+# functionality(??). This is typically(??) used to scan JARs for configuration
 # information. JARs that do not contain such information may be excluded from
 # the scan to speed up the scanning process. This is the default list. JARs on
 # this list are excluded from all scans. Scan specific lists (to exclude JARs
-# from individual scans) follow this. The list must be a comma separated list of
+# from individual(???????) scans) follow this. The list must be a comma separated list of
 # JAR file names.
 # The JARs listed below include:
 # - Tomcat Bootstrap JARs
@@ -90,6 +95,8 @@ shared.loader=
 # - Tomcat JARs
 # - Common non-Tomcat JARs
 # - Test JARs (JUnit, Cobertura and dependencies)
+# ??jar?????????????????????????????????
+# ???????????????????
 tomcat.util.scan.DefaultJarScanner.jarsToSkip=\
 bootstrap.jar,commons-daemon.jar,tomcat-juli.jar,\
 annotations-api.jar,el-api.jar,jsp-api.jar,servlet-api.jar,websocket-api.jar,\
@@ -116,17 +123,20 @@ jetty-*.jar,oro-*.jar,servlet-api-*.jar,tagsoup-*.jar,xmlParserAPIs-*.jar,\
 xom-*.jar
 
 # Additional JARs (over and above the default JARs listed above) to skip when
-# scanning for Servlet 3.0 pluggability features. These features include web
+# scanning for Servlet 3.0 pluggability(????) features. These features include web
 # fragments, annotations, SCIs and classes that match @HandlesTypes. The list
 # must be a comma separated list of JAR file names.
+# ????? servlet 3.0???
 org.apache.catalina.startup.ContextConfig.jarsToSkip=
 
 # Additional JARs (over and above the default JARs listed above) to skip when
 # scanning for TLDs. The list must be a comma separated list of JAR file names.
+# ??TLDs???
 org.apache.catalina.startup.TldConfig.jarsToSkip=tomcat7-websocket.jar
 
 #
 # String cache configuration.
+# String ?????
 tomcat.util.buf.StringCache.byte.enabled=true
 #tomcat.util.buf.StringCache.char.enabled=true
 #tomcat.util.buf.StringCache.trainThreshold=500000
