--- a/bee-code-test-field/project-demo/spring-web-test-field/pom.xml
+++ b/bee-code-test-field/project-demo/spring-web-test-field/pom.xml
@@ -30,11 +30,11 @@
         </dependency>
 
         <!--   mybatis 启动类   -->
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.2.2</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.mybatis.spring.boot</groupId>-->
+<!--            <artifactId>mybatis-spring-boot-starter</artifactId>-->
+<!--            <version>2.2.2</version>-->
+<!--        </dependency>-->
 
         <!-- 数据源 -->
         <dependency>
