--- a/bee-code-test-field/project-demo/spring-web-test-field/src/main/resources/application.properties
+++ b/bee-code-test-field/project-demo/spring-web-test-field/src/main/resources/application.properties
@@ -2,17 +2,17 @@ server.port=8988
 #server.servlet.context-path=/test-project
 
 ## \u65E5\u5FD7\u7EA7\u522B
-#logging.level.root=debug
-
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-
-spring.datasource.url=jdbc:mysql://localhost:3306/beenest?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
-
-spring.datasource.username=root
-
-spring.datasource.password=123456
-mybatis.mapper-locations=classpath*:mappers/**/*.xml
-mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.root=debug
+#
+#
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/beenest?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
+#
+#spring.datasource.username=root
+#
+#spring.datasource.password=123456
+#mybatis.mapper-locations=classpath*:mappers/**/*.xml
+#mybatis.configuration.map-underscore-to-camel-case=true
